Fri Dec  6 23:58:47 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* ace/CDR_Stream.cpp:
	* ace/CDR_Stream.i: Set good_bit_ to zero whenever the sanity
	  check for remaining length in the stream fails. Thanks to Jerry
	  D. De Master <jdemaste@rite-solutions.com> for pointing out the
	  problem. 

	* ace/CDR_Array_Test.cpp: Extended the test to include test for
	  checking the value of good_bit () by forcing an erroneous read. 

Fri Dec  6 16:26:49 2002  Krishnakumar B  <kitty@cs.wustl.edu>

        * ace/FILE_Addr.cpp (set): Windows appends ASCII 'a' - 'z' and
          'A' - 'Z' to generate unique filenames and gives up if the
          character in the template is a non-alphabetic character. In such
          cases, it returns a NULL. Make sure that we supply a template
          with a alphabetic character before XXXXXX as well as check for a
          NULL return value.

Thu Dec  5 22:19:41 2002  Steve Huston  <shuston@riverace.com>

        * ace/OS.{h i}: Added ACE_OS::sigwaitinfo() wrapper.

        * ace/POSIX_Proactor.{h cpp} (ACE_POSIX_SIG_Proactor): Clean up some
          spelling and formatting in documentation comments. Clean up the
          signal calls, and substitue ACE_OS calls for naked API calls.
          Unless we have specific evidence to the contrary, trust what the
          OS says with signal information. Otherwise, if we run through
          all the aiocbs on every signal, we could get into a situation
          where deferred I/O operations are never restarted.

        * ace/POSIX_CB_Proactor.h: Changed the comments to say this is a
          callback-based proactor, not an SGI IRIX one. The callback
          paradigm is part of newer POSIXes and available on more than
          SGI... HP-UX, for instance.

Thu Dec  5 20:33:18 2002  Steve Huston  <shuston@riverace.com>

        * ace/config-aix-4.x.h: Removed ACE_NEEDS_DEV_IO_CONVERSION. This