@@ -1,13 +1,21 @@
+Sat Dec 07 14:29:47 2002  Nanbor Wang  <nanbor@cs.wustl.edu>
+
+	* ace/ACE.cpp (format_hexdump): This change fixed the problem that
+	  a character is missing when the last line has less than 16 bytes
+	  or less to display.  Thanks to Terry <terry@ec-tone.com> for
+	  submitting the patch, and Johnny Willemsen
+	  <jwillemsen@remedy.nl> for reviewing the change.
+
 Fri Dec  6 23:58:47 2002  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>
 
 	* ace/CDR_Stream.cpp:
 	* ace/CDR_Stream.i: Set good_bit_ to zero whenever the sanity
 	  check for remaining length in the stream fails. Thanks to Jerry
 	  D. De Master <jdemaste@rite-solutions.com> for pointing out the
-	  problem. 
+	  problem.
 
 	* ace/CDR_Array_Test.cpp: Extended the test to include test for
-	  checking the value of good_bit () by forcing an erroneous read. 
+	  checking the value of good_bit () by forcing an erroneous read.
 
 Fri Dec  6 16:26:49 2002  Krishnakumar B  <kitty@cs.wustl.edu>
 
