@@ -1630,6 +1630,7 @@ Mathias Waack <mathias.waack@schlund.de>
 Mike Nordell <tamlin@algonet.se>
 Tufan Oruk <toruk@usa.net>
 Tim Smith <timsmith_s@hotmail.com>
+Terry <terry@ec-tone.com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
